dev/fcj-dev-env.template.json
{
  "Resources": {
    "devvpc91497180": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/Resource"
      }
    },
    "devvpcPublicSubnet1SubnetA3824C8F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PublicSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet1/Subnet"
      }
    },
    "devvpcPublicSubnet1RouteTableEAF2D21B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet1/RouteTable"
      }
    },
    "devvpcPublicSubnet1RouteTableAssociation969EB851": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPublicSubnet1RouteTableEAF2D21B"
        },
        "SubnetId": {
          "Ref": "devvpcPublicSubnet1SubnetA3824C8F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "devvpcPublicSubnet1DefaultRouteD18E976D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPublicSubnet1RouteTableEAF2D21B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "devvpcIGW7D664B58"
        }
      },
      "DependsOn": [
        "devvpcVPCGW7C912A36"
      ],
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "devvpcPublicSubnet1EIP4C440728": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet1/EIP"
      }
    },
    "devvpcPublicSubnet1NATGatewayBFE8C55A": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "devvpcPublicSubnet1EIP4C440728",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "devvpcPublicSubnet1SubnetA3824C8F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet1/NATGateway"
      }
    },
    "devvpcPublicSubnet2Subnet1DDF1284": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PublicSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet2/Subnet"
      }
    },
    "devvpcPublicSubnet2RouteTable57742964": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet2/RouteTable"
      }
    },
    "devvpcPublicSubnet2RouteTableAssociationBBCACBFD": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPublicSubnet2RouteTable57742964"
        },
        "SubnetId": {
          "Ref": "devvpcPublicSubnet2Subnet1DDF1284"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "devvpcPublicSubnet2DefaultRoute76216345": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPublicSubnet2RouteTable57742964"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "devvpcIGW7D664B58"
        }
      },
      "DependsOn": [
        "devvpcVPCGW7C912A36"
      ],
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "devvpcPublicSubnet2EIPAD5744F2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet2/EIP"
      }
    },
    "devvpcPublicSubnet2NATGateway1B5BFDF8": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "devvpcPublicSubnet2EIPAD5744F2",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "devvpcPublicSubnet2Subnet1DDF1284"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PublicSubnet2/NATGateway"
      }
    },
    "devvpcPrivateSubnet1Subnet22F04173": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PrivateSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet1/Subnet"
      }
    },
    "devvpcPrivateSubnet1RouteTableDDCD8381": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet1/RouteTable"
      }
    },
    "devvpcPrivateSubnet1RouteTableAssociationE4E08F53": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPrivateSubnet1RouteTableDDCD8381"
        },
        "SubnetId": {
          "Ref": "devvpcPrivateSubnet1Subnet22F04173"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "devvpcPrivateSubnet1DefaultRouteA8239174": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPrivateSubnet1RouteTableDDCD8381"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "devvpcPublicSubnet1NATGatewayBFE8C55A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "devvpcPrivateSubnet2Subnet3CBA682C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PrivateSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet2/Subnet"
      }
    },
    "devvpcPrivateSubnet2RouteTable131A1A37": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet2/RouteTable"
      }
    },
    "devvpcPrivateSubnet2RouteTableAssociation4D892E0C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPrivateSubnet2RouteTable131A1A37"
        },
        "SubnetId": {
          "Ref": "devvpcPrivateSubnet2Subnet3CBA682C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "devvpcPrivateSubnet2DefaultRoute9F3FAD8A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "devvpcPrivateSubnet2RouteTable131A1A37"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "devvpcPublicSubnet2NATGateway1B5BFDF8"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "devvpcIGW7D664B58": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "fcj-dev-env/dev-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/IGW"
      }
    },
    "devvpcVPCGW7C912A36": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "devvpc91497180"
        },
        "InternetGatewayId": {
          "Ref": "devvpcIGW7D664B58"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/dev-vpc/VPCGW"
      }
    },
    "fcjc9ide": {
      "Type": "AWS::Cloud9::EnvironmentEC2",
      "Properties": {
        "InstanceType": "t3.medium",
        "AutomaticStopTimeMinutes": 240,
        "Name": {
          "Ref": "C9IDEName"
        },
        "SubnetId": {
          "Ref": "devvpcPublicSubnet1SubnetA3824C8F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fcj-dev-env/fcj-c9-ide"
      }
    }
  },
  "Parameters": {
    "C9IDEName": {
      "Type": "String",
      "Default": "Faster Cryptography in Java with AWS",
      "Description": "Development environment for Faster Cryptography in Java with AWS",
      "MaxLength": 60,
      "MinLength": 1
    }
  }
}
